<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sa_sh.sepehr.moshtarakapp.Activities.HomeActivity"
    tools:showIn="@layout/home_app_bar">
    
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="3dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="3dp"
            android:orientation="vertical">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@drawable/img_text_header"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_margin="2dp" />
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_sale"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sale"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnLastBill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_last_bill"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_bill"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnKardex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_kardex"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kardex"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnTracking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_tracking"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracking"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnMamoor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_mamoor"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mamoor"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnTrain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_train"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/train"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnHelp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_help"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnSupport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_support"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/support"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/imgBtnSuggest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/img_suggest"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:layout_margin="2dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suggest"
                        android:gravity="center_horizontal|bottom"
                        android:layout_gravity="center_horizontal|bottom"/>
                </android.support.v7.widget.LinearLayoutCompat>
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>
